--- a/web-interface/templates/index.html
+++ b/web-interface/templates/index.html
@@ -1,4 +1,4 @@
-<html>
+<!-- <html>
   <head>
     <title>Stream</title>
     <style>
@@ -6,11 +6,72 @@
         display: block;
         margin-left: auto;
         margin-right: auto;
-        width: 35%;
+        width: 50%;
       }
     </style>
   </head>
   <body>
     <img src="http://localhost:8080/video"/>
+    <p>{{ test }}</p>
   </body>
+</html> -->
+
+
+<!DOCTYPE html>
+<html>
+<head>
+	<title>JSMpeg Stream Client</title>
+	<style type="text/css">
+		html, body {
+			background-color: #111;
+			text-align: center;
+		}
+	</style>
+	
+</head>
+<body>
+  <img id='video-canvas' />
+	<script type="text/javascript">
+  // public method for encoding an Uint8Array to base64
+    function encode (input) {
+        var keyStr = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/=";
+        var output = "";
+        var chr1, chr2, chr3, enc1, enc2, enc3, enc4;
+        var i = 0;
+
+        while (i < input.length) {
+            chr1 = input[i++];
+            chr2 = i < input.length ? input[i++] : Number.NaN; // Not sure if the index 
+            chr3 = i < input.length ? input[i++] : Number.NaN; // checks are needed here
+
+            enc1 = chr1 >> 2;
+            enc2 = ((chr1 & 3) << 4) | (chr2 >> 4);
+            enc3 = ((chr2 & 15) << 2) | (chr3 >> 6);
+            enc4 = chr3 & 63;
+
+            if (isNaN(chr2)) {
+                enc3 = enc4 = 64;
+            } else if (isNaN(chr3)) {
+                enc4 = 64;
+            }
+            output += keyStr.charAt(enc1) + keyStr.charAt(enc2) +
+                      keyStr.charAt(enc3) + keyStr.charAt(enc4);
+        }
+        return output;
+    }
+
+		let img = document.getElementById('video-canvas');
+    let socket = new WebSocket("ws://192.168.1.101:8765");
+    socket.binaryType = "arraybuffer";
+    console.log('hi')
+    socket.onconnect = () => {
+      socket.send('connected')
+    }
+    socket.onmessage = msg => {
+      let bytes = new Uint8Array(msg.data);
+      img.src = 'data:image/png;base64,'+ encode(bytes);
+    }
+
+	</script>
+</body>
 </html>
